<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vanierRed"
    tools:context=".CreateAccount"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/newUsername"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_newUsername"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="276dp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_newPassword"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="327dp" />


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_confirmpassword"
            android:paddingLeft="20dp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newProfileName"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_newName"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="378dp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="209dp"
            android:layout_height="51dp"
            android:background="@color/cyan"
            android:textColor="@color/white"
            android:text="@string/menuregister"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="446dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="70dp"
        android:text="Create an account"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>