<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vanierRed"
    tools:context=".LogInPage"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="420dp"
        android:layout_height="0dp"
        android:layout_marginBottom="61dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText

            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_newUsername"
            android:inputType="textPersonName"
            android:layout_marginBottom="15dp"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/et_newPassword"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"/>

        <CheckBox
            android:id="@+id/chkboxRememberUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightGrey"
            android:text="@string/chkboxRemember" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/login"
        android:background="@color/cyan"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>