<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vanierRed"
    tools:context=".LibrarySharing">

    <Button
        android:id="@+id/btn_import"

        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginTop="116dp"
        android:text="@string/btnImport"
        app:layout_constraintBottom_toTopOf="@+id/txtImport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/txtImport"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="310dp"
        android:text="@string/importText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_import" />

    <Button
        android:id="@+id/btn_export"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/btnExport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/txtExport"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="310dp"
        android:text="@string/importText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_export"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>